# Operating-Systems-234123

./: CMakeLists.txt  Makefile  README.md  free.cpp  free.out  main.cpp  malloc_1.cpp  malloc_1.h  malloc_2.cpp  malloc_2.h  malloc_3.cpp  malloc_3.h  old_malloc_2.cpp  tamuz2.cpp  test_1.cpp  test_1.out  test_2.cpp  test_2.out  test_3.cpp  test_3.out  utils.h
Homework_1/: Commands.cpp  Commands.h  Makefile  run.sh  signals.cpp  smash  smash.cpp
Homework_1/Testing/: FreeTest.cpp  test_expected_output1R.txt  test_input2.txt
Homework_1/Testing/other_tests/os1-tests-master/: smash_test
Homework_1/Testing/other_tests/os1-tests-master/files/: my_sleep
Homework_1/Testing/other_tests/os1-tests-master/unit/: cp.out  jobs.in  pipe.exp  pipe.in  pipe.out  quit.out  redirect.exp  redirect.in  redirect.out  showpid.out
Homework_3/: Makefile  Queue.c  Queue.h  autorand.sh  client  free.sh  kills.sh  output.c  output.cgi  rand.sh  request.c  request.h  segel.c  segel.h  server  server.c  sht.sh
Homework_3/gurtests/: README.TXT  gur_res  server_tests.py
Homework_4/: Makefile  malloc_1.cpp  test_1.cpp  test_1.out  test_3.cpp
ariel/os_hw4_part3_tests-main/: CMakeLists.txt  colors.h  malloc_3.cpp  printMemoryList.h  test.cpp
ariel/os_hw4_part3_tests-main/test_compile/: os_malloc.h
newariel/: README.md  malloc_3.h  printMemoryList.h  test.cpp
newariel/test_compile/: test.cpp
oldariel/: printMemoryList.h  test.cpp
os_hw4_part3_tests-main/: test.cpp
os_hw4_part3_tests-main/test_compile/: os_malloc.h
